[gd_scene load_steps=22 format=2]

[ext_resource path="res://Chest.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Enviroment/4 Animated objects/Chest.png" type="Texture" id=2]
[ext_resource path="res://EnrG_Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/Enviroment/chest.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Chest",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 15 ), SubResource( 17 ), SubResource( 15 ), SubResource( 17 ), SubResource( 15 ), SubResource( 17 ), SubResource( 17 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="OccluderPolygon2D" id=24]
closed = false
polygon = PoolVector2Array( -7.97595, -12.9249, 14.2463, -12.9249, 14.2462, 15.6156, -7.97601, 15.6156 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 27.6757, 10.6667 )

[sub_resource type="Animation" id=23]
resource_name = "EnrG_Ball"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnrG_Ball:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.888889 ), Vector2( 0, -24 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Idle"
length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 2, 1, 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Open"
length = 1.9
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.501, 0.668, 0.835, 1.002, 1.169, 1.336, 1.503 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.501, 0.835, 1.002, 1.503 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.7 ), Vector2( 1, 0.1 ), Vector2( 1, 0.1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.002 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_drop_object"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnrG_Ball:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.501, 1.002 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EnrG_Ball:position")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.002, 1.169, 1.336, 1.503 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7.11111 ), Vector2( 0, -15.1111 ), Vector2( 0, -9.77778 ), Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnrG_Ball:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnrG_Ball:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -7.11111 ) ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 13.8378, 10.6667 )

[sub_resource type="Environment" id=25]
background_mode = 4
glow_enabled = true

[node name="Chest" type="AnimatedSprite"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
scale = Vector2( 1.15625, 1.125 )
frames = SubResource( 9 )
animation = "Chest"
script = ExtResource( 1 )
object_scene = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 1.77778, 0.864865 )
rotation = 1.57079
occluder = SubResource( 24 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -2.062e-07, 3.55556 )
shape = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnrG_Ball = SubResource( 23 )
anims/Idle = SubResource( 11 )
anims/Open = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="EnrG_Ball" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 0.888889 )

[node name="Tween" type="Tween" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2048
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 0, 3.55556 )
shape = SubResource( 14 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 25 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
